V1.15.1 (#253)
### Updates

* Console update to 3.6.2

* #239 - Add validation (400) when POST /search using 'text' along with 'tags', 'attributes'
* #241 - Soft DELETE /document/{documentId} returns document not found
* #242 - "Untagged" tag is added to document when using attributes
* #248 - Add optional "documentId" to POST /documents, POST /documents/upload
* #247 - Add MappingAttributeSourceType CONTENT_KEY_VALUE support
* #251 - Add default content type for Google Docs

### Bugs Fixes

* #237 - PUT/sites/{siteId}/classifications/{classificationId} "'name' is already used
* #240 - Classification Schema: Adding an optional attribute that conflicts with site-level required schema
* #244 - GET /mappings API missing mappingId from response
* #245 - POST /users with invalid email gives 500
* #252 - Search for Document Attributes eqOr returns all records